--- a/profile_home.css
+++ b/profile_home.css
@@ -16,23 +16,26 @@ h2 {
 }
 
 /* ===== ===== main menu ===== ===== */
-.main-section {
-  text-align: center;
-  width: 700px;
+#main-section {
+  position: relative;
+  text-align: left;
+  width: 600px;
   height: 50px;
-  margin-left: 590px;
 }
 .submenu {
-  margin: 50px;
+  margin: 10px;
   font-family: 'Quicksand', sans-serif;
   font-size: 30px;
   color: #000000;
   text-decoration: none;
+  margin: 20px;
 }
 .submenu:hover {
   font-size: 35px;
   transition: 500ms;
   text-decoration: underline;
+  color: red;
+  font-weight: bold;
 }
 
 /* ===== ===== article ===== ===== */
@@ -49,7 +52,7 @@ h2 {
 }
 #profile-bio {
   font-family: 'Quicksand', sans-serif;
-  width: 900px;
+  width: 700px;
   font-size: 20px;
   margin-left: 200px;
 }
